--- a/src/styles/analysis.css
+++ b/src/styles/analysis.css
@@ -1,12 +1,31 @@
+
+
 .all-blocks {
     display: flex;
     justify-content: center;
     flex-direction: row;
     padding: 20px;
+    list-style: none;
+    
+}
+
+.input-texting {
+padding: 12px;
+width: 250px;
+}
+
+.input-score {
+padding: 12px;
+width: 25%;
+}
+
+.all-blocks ul {
+    list-style: none;
+    width: 450px;
 }
 
 .color-blue {
-    background-color: blue;
+    background-color: #4682B4;
     padding: 30px;
 }
 
@@ -16,11 +35,25 @@
 }
 
 .color-green {
-    background-color: green;
+    background-color: #2E8B57;
     padding: 30px;
 }
 
 .color-red {
-    background-color: red;
+    background-color: #CD5C5C;
     padding: 30px;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+}
+
+.flex-end {
+        display: flex;
+        justify-content: flex-end;
+}
+
+.margin-align {
+    margin-left: 30px;
 }
