--- a/src/styles/signup.css
+++ b/src/styles/signup.css
@@ -12,6 +12,18 @@
     align-items:center !important;
     
   }
+.form-login{
+  width: 350px;
+    height: 280px;
+    background-color: rgba(41, 39, 39, 0.3);
+    box-shadow: 0 5px 30px black;
+    margin-top: 30px;
+}
+
+.form-login ::placeholder{
+  color: aliceblue;
+}
+
   .form-signup{
     width: 350px;
     height: 430px;
