--- a/src/styles/analysis.css
+++ b/src/styles/analysis.css
@@ -6,12 +6,23 @@
     flex-direction: row;
     padding: 20px;
     list-style: none;
-    
 }
 
 .input-texting {
 padding: 12px;
 width: 250px;
+}
+
+.input-title {
+padding: 25px;
+width: 250px;
+font-size: 18px;
+border-style: ridge;
+}
+
+.title-container {
+    display: flex;
+    justify-content: center;
 }
 
 .input-score {
@@ -27,21 +38,25 @@ width: 25%;
 .color-blue {
     background-color: #4682B4;
     padding: 30px;
+    border-style: ridge none none ridge;
 }
 
 .color-yellow {
     background-color: goldenrod;
     padding: 30px;
+    border-style: none none ridge ridge;
 }
 
 .color-green {
     background-color: #2E8B57;
     padding: 30px;
+    border-style: ridge ridge none none;
 }
 
 .color-red {
     background-color: #CD5C5C;
     padding: 30px;
+    border-style: none ridge ridge none;
 }
 
 .center {
@@ -55,7 +70,7 @@ width: 25%;
 }
 
 .margin-align {
-    margin-left: 30px;
+    margin-left: 40px;
 }
 
 .analysis-buttom {
