--- a/src/styles/feedback.css
+++ b/src/styles/feedback.css
@@ -19,6 +19,11 @@
 .feedback-results{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    margin-left: 50px;
+    margin-bottom: 200px;
+    margin-top: 30px;
+    line-height: 1.5;
 }
 
 .feedback-page{
