--- a/src/styles/analysis.css
+++ b/src/styles/analysis.css
@@ -80,5 +80,12 @@ width: 25%;
 
 .analysis-buts{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 95px;
+    margin-right: 90px;
+}
+
+.score {
+    margin-right: 120px;
 }
